small syntaxys fixes

--- a/master_thesis/RiverSim_master_thesis.tex
+++ b/master_thesis/RiverSim_master_thesis.tex
@@ -65,7 +65,7 @@
 
     %На цьому етапі вже можна побачити деяку спільну рису між всіма процесами, а саме наявність взаємозалежних поля і матерії на котра переміщається в локальному напрямку максимального поля. Тому багато процесів із розвитку мережі можна звести до одного математичного формалізму. 
     %Na tym etapie można już dostrzec pewną wspólną cechę wszystkich procesów, a mianowicie obecność współzależnych pól i materii poruszającej się w lokalnym kierunku maksymalnego pola. Dlatego wiele procesów rozwoju sieci można sprowadzić do jednego formalizmu matematycznego.\par
-    At this stage, you can already see a common feature of all processes, namely the presence of interdependent fields and matter moving in the local direction of the maximum area. Therefore, many network growing processes can be reduced to a single mathematical formalism.\par
+    At this stage, you can already see a common feature of all processes, namely the presence of interdependent fields and matter moving in the local direction of the maximum field flux. Therefore, many network growing processes can be reduced to a single mathematical formalism.\par
 
     %В даній праці ми фокусуємося на створенні Python бібліотеки котра помагає досліджувати розвиток мережі в полі Лапласа на прикладі розвитку мережі річки. Спочатку ми описуємо математичну модель розвитку мережі річки в полі Лапласа. Тоді описуємо бібліотеку riversim, її алгоритми і показуємо простий спосіб застосування програми крок по кроку. Тоді наводимо приклади збіжності розв'язку і покажемо кілька результатів.
     %W tej pracy skupiamy się na stworzeniu biblioteki Pythona, która pomaga badać rozwój sieci w polu Laplace'a na przykładzie rozwoju sieci rzecznej. Najpierw opisujemy matematyczny model rozwoju sieci rzecznej w polu Laplace'a. Następnie opisujemy bibliotekę riversim, jej algorytmy i pokazujemy prosty sposób korzystania z programu krok po kroku. Następnie podajemy przykłady zbieżności rozwiązania i pokazujemy kilka wyników.\par
@@ -94,7 +94,7 @@
 
     %Однак, якщо ґрунт достатньо проникний, вода може занурюватися в землю, а не стікати вниз (темно-сині стрілки на рис. \ref{float_soaking}). Вода спочатку накопичується в підземній водоймі, а потім під дією гідродинамічного тиску витікає з річкового джерела і берегів. Цей процес утворює ерозію ґрунту в околиці джерела.
     %Jeśli jednak gleba jest wystarczająco przepuszczalna, woda może wsiąkać w ziemię, zamiast spływać (ryc. \ref{pow_wsiakanie}). Woda najpierw gromadzi się w podziemnym zbiorniku, a następnie wypływa ze źródła rzeki i brzegów pod wpływem ciśnienia hydrodynamicznego. Proces ten powoduje erozję gleby w pobliżu źródła.
-    However, if the soil is sufficiently permeable, water can soak into the ground instead of running off (Fig. \ref{pow_wsiakanie}). Water first accumulates in an underground reservoir and then flows out of the river source and banks under the influence of hydrodynamic pressure. This process erodes the soil near the source.
+    However, if the soil is sufficiently permeable, water can soak into the ground instead of running off (Fig. \ref{pow_wsiakanie}). Water first accumulates in an underground reservoir and then flows out of the river source and boundaries under the influence of hydrodynamic pressure. This process erodes the soil near the source.
 
     \begin{wrapfigure}{r}{0.5\textwidth}
       \begin{center}
@@ -291,7 +291,7 @@
     During software development two solutions were created: RiverSim\cite{riversim} - a program that contains all the algorithms for river network generation, riversimpy\cite{riversimpy} - a Python library that contains algorithms that facilitate the creation of scripts for simulating network growth in a Laplas field.
     
     %RiverSim zawiera niektórę dodatkowe algorytmy dla odwracalnej ewolucji wsztecznej i do przodu, a poza tym RiverSim i riversimpy zawierają tę same algorytmy, w podalszym opisie głównie skupimysię na riversimpy. 
-    RiverSim includes some additional algorithms for reversible backward and forward evolution, and besides RiverSim and riversimps contain the same algorithms, in the following description we will mainly focus on riversimps.
+    RiverSim includes some additional algorithms for reversible backward and forward evolution, and besides RiverSim and riversimpy contain the same algorithms, in the following description we will mainly focus on riversimpy.
 
     \section{Geometry}
       
@@ -303,13 +303,13 @@
         \centering
         \includegraphics[width=1\textwidth]{figs/geometry_examples.png}
         %Szereg przykładów granicy:  brzeg z dwoma zaznaczonymi źródłami (1), granica zawierająca granicę(na przykład jezioro) (2), basen rzeki aproksymowany łamą linią i częściowo odzwierciedloną rżeką (4), dwa prostokąty z różną szerokością nie powiązane topologicznie(5).
-        \caption{Several examples of a boundary: a bank with two selected sources (1), a boundary containing a boundary (for example, a lake) (2), a river basin approximated by a broken line and a partially reflected river (4), two rectangles with different widths, not topologically related (5).}
+        \caption{Several examples of a boundary: a boundary with two sources (1), a boundary containing a hole (for example, a lake) (2), a river basin approximated by a broken line and a partially reflected river (4), three rectangles with different widths, not topologically related (5).}
         \label{geometry_examples}
       \end{figure}
       
       %І що б охопити всю цю довільність геометрії, було створено цілий ряд класів і функцій. Деякі найголовніші класи і функції: Point, Polar, Line, Boundary, BoundaryConditions, Sources, Branch, Rivers, Region і функція BoundaryGenerator. Приклади використання даних функцій розглянемо далі.
       %Aby pokryć całą tę arbitralność geometrii, stworzono szereg klas i funkcji\ref{GeometryClasses}. Niektóre z najważniejszych klas i funkcji to Point, Polar, Line, Boundary, BoundaryConditions, Sources, Branch, Rivers, Region i funkcja BoundaryGenerator. Poniżej rozważymy przykłady użycia tych funkcji.
-      And in order to cover all this arbitrariness of geometry, a number of classes and functions were created \ref{GeometryClasses}. Some of the most important classes and functions are Point, Polar, Line, Boundary, BoundaryConditions, Sources, Branch, Rivers, Region, and the BoundaryGenerator function. We will consider examples of the use of these functions below.
+      And in order to cover all this arbitrariness of geometry, a number of classes and functions were created (Pic. \ref{GeometryClasses}). Some of the most important classes and functions are Point, Polar, Line, Boundary, BoundaryConditions, Sources, Branch, Rivers, Region, and the BoundaryGenerator function. We will consider examples of the use of these functions below.
       
       \begin{figure}[H]
         \centering
@@ -329,7 +329,7 @@
 
       %Спочатку задаємо впорядковану множину координат з допомогою класу Point і ліній з допомогою класу Line для визначення границі. В програмі границя репрезентується класом Boundary. Таких границь може бути декілька. Група границь котрим присвоєний унікальний індекс утворює регіон який репрезентується класом Region. Границя - це замкнута лінія, іншими словами полігон. В регіоні немає обмежень на кількість границь. Границя також може містити цілковито іншу границю, проте перетин ліній не допускається. Щоб утворити дірку в границі потрібно визначити координату в межах цієї границі і присвоїти до списку дір який зберігається в класі Region. Наступним кроком є визначення місць звідки буде відбуватися ріст мережі річки. Такими місцями може бути кожна  точка границі і джерел може бути необмежена кількість(практично обмежена сумарної кількістю координат границь). Для зберігання інформації про початкові координати джерел створено клас Source. Цей клас зберігає унікальний номер кожного джерела, номер границі на котрій розташовується і номер координати на даній границі.
       %Najpierw określamy uporządkowany zestaw współrzędnych za pomocą klasy Point i linii za pomocą klasy Line, aby określić granicę. W programie granica jest reprezentowana przez klasę Boundary. Takich granic może być kilka. Grupa granic, którym przypisano unikalny indeks, tworzy region reprezentowany przez klasę Region. Granica jest zamkniętą linią, innymi słowy wielokątem. W regionie nie ma ograniczeń co do liczby granic. Jedna granica może również zawierać inną granicę, ale przecięcie linii jest niedozwolone. Aby utworzyć otwór w granicy, należy zdefiniować współrzędną w obrębie tej granicy i przypisać ją do listy otworów przechowywanej w klasie Region. Kolejnym krokiem jest określenie miejsc, z których nastąpi rozwój sieci rzecznej. Takimi miejscami może być każdy punkt granicy, a źródeł może być nieograniczona (praktycznie ograniczona całkowitą liczbą współrzędnych granic). Klasa Source została stworzona do przechowywania informacji o początkowych współrzędnych źródeł. Ta klasa przechowuje unikalny numer każdego źródła, numer granicy, na której się znajduje, oraz numer współrzędnej na tej granicy.
-      First, we specify an ordered set of coordinates using the Point class and lines using the Line class to determine the boundary. In the program, the boundary is represented by the Boundary class. There can be several such borders. A group of boundaries assigned a unique index forms a region represented by the Region class. The border is a closed line, in other words, a polygon. There are no limits on the number of borders in the region. The border can also contain a completely different border, but crossing lines is not allowed. To create a hole in a border, you need to define a coordinate within this border and assign it to the list of holes stored in the Region class. The next step is to determine the places from where the growth of the river network will take place. Such places can be every point of the border and there can be an unlimited number of sources (practically limited by the total number of coordinates of the borders). The Source class was created to store information about the initial coordinates of the sources. This class stores the unique number of each source, the number of the boundary on which it is located, and the number of the coordinate on this boundary.
+      First, we specify an ordered set of coordinates using the Point class and lines using the Line class to determine the boundary. In the program, the boundary is represented by the Boundary class. There can be several such borders. A group of boundaries assigned a unique index forms a region represented by the Region class. The border is a closed line, in other words, a polygon. There are no limits on the number of borders in the region. The border can also contain a different border, but crossing lines is not allowed. To create a hole in a border, you need to define a coordinate within this border and assign it to the list of holes stored in the Region class. The next step is to determine the places from where the growth of the river network will take place. Such places can be every point of the border and there can be an unlimited number of sources (practically limited by the total number of coordinates of the borders). The Source class was created to store information about the initial coordinates of the sources. This class stores the unique number of each source, the number of the boundary on which it is located, and the number of the coordinate on this boundary.
 
       \begin{mintedbox}{python}
         from riversim import *
@@ -353,7 +353,7 @@
 
       %Після визначення регіону і розташування джерел, тепер можемо перейти до побудови геометрії річки. Всі дані про геометрію річок і алгоритми містяться в класі Rivers. Rivers містить унікальний номер для кожної річки, котрий має теж саме значення,  що й номер джерела в Sources. Для ініціалізації класу Rivers, потрібно конвертувати дані з класу Sources в координати і напрямок. Для цього служить функція GetSourcesIdsPointsAndAngles класу Region аргументом котрої є Sources. В результаті ми отримаємо набір індексів річок і відповідні їм координати і напрямок перпендикулярний до границі. Для визначення точного напрямку перпендикуляру, має значення напрямок координати при задаванні границі. Прийнято, що перпендикуляр буде з лівої сторони від напрямку координат. Тому якщо звернути увагу на регіон де є дірка по центрі, то зовнішня границя має протилежний напрямок нумерації координат відносно внутрішньої.
       %Po określeniu regionu i lokalizacji źródeł możemy przystąpić do konstruowania geometrii rzeki. Wszystkie dane geometrii rzeki i algorytmy są zawarte w klasie Rivers. Rzeki zawierają unikalny numer dla każdej rzeki, który ma takie samo znaczenie jak numer źródła w Źródłach. Aby zainicjować klasę Rivers, należy przekonwertować dane z klasy Sources na współrzędne i kierunek. W tym celu jako argument służy funkcja GetSourcesIdsPointsAndAngles klasy Region, której argumentem jest Sources. W rezultacie otrzymamy zestaw indeksów rzecznych i odpowiadających im współrzędnych oraz kierunek prostopadły do granicy. Aby określić dokładny kierunek prostopadłej, podczas wyznaczania granicy ważny jest kierunek współrzędnych. Zakłada się, że prostopadła będzie po lewej stronie kierunku współrzędnych. Dlatego jeśli zwrócisz uwagę na obszar, w którym znajduje się dziura w środku, wówczas zewnętrzna granica ma przeciwny kierunek numeracji współrzędnych w stosunku do wewnętrznej.
-      After determining the region and the location of the sources, we can now proceed to the construction of the geometry of the river. All river geometry data and algorithms are contained in the Rivers class. Rivers contains a unique number for each river, which has the same meaning as the source number in Sources. To initialize the Rivers class, you need to convert the data from the Sources class into coordinates and direction. For this, the GetSourcesIdsPointsAndAngles function of the Region class serves as an argument, which has Sources as its argument. As a result, we will get a set of river indices and their corresponding coordinates and the direction perpendicular to the border. To determine the exact direction of the perpendicular, the direction of the coordinate is important when setting the border. It is assumed that the perpendicular will be on the left side of the coordinate direction. Therefore, if you pay attention to the region where there is a hole in the center, then the outer border has the opposite direction of coordinate numbering relative to the inner one.
+      After determining the region and the location of the sources, we can now proceed to the construction of the geometry of the river. All river geometry data and algorithms are contained in the Rivers class. Rivers contains a unique number for each river, which has the same value as the source number in Sources. To initialize the Rivers class, you need to convert the data from the Sources class into coordinates and direction. For this, is used the GetSourcesIdsPointsAndAngles function of the Region class, which has Sources as its argument. As a result, we will get a set of river indices and their corresponding coordinates and the direction perpendicular to the border. To determine the exact direction of the perpendicular, the direction of the coordinate is important when setting the border. It is assumed that the perpendicular will be on the left side of the coordinate direction. Therefore, if you pay attention to the region where there is a hole in the center, then the outer border has the opposite direction of coordinate numbering relative to the inner one.
       
       \begin{figure}[H]
         \centering
@@ -404,7 +404,8 @@
 
       %Кількість елементів сітки на котру ми розділюємо регіон має прямий вплив на розмір матриці лінійних рівняння, а тому на час знаходження розв'язку диференційного рівняння. Щоб зменшити час обчистленнь, ми можемо зменшити густини координат границі річки, при цьому не втрачаючи на точності. Для цього ми робимо процедуру огрублення границь частин річки. Тепер нам потрібно класи  Sources, Region та Rivers вкласти в границю Boundary, оскільки генератор сітки вимагає тільки  границю як аргумент. Другою проблемою, котра згадувалася вище є те, що немає можливості задати граничні умови в середині регіону, а тільки на границі. Для цього лінії з котрих складається мережа річки розділяються на дві лінії котрі знаходяться дуже близько одна до одної.
       %Liczba elementów siatki, na jakie dzielimy obszar, ma bezpośredni wpływ na wielkość macierzy równań liniowych, a więc na czas znalezienia rozwiązania równania różniczkowego. Aby skrócić czas obliczeń, możemy zmniejszyć gęstość współrzędnych granicy rzeki bez utraty dokładności. Zmniejszenie zagęszczenia współrzędnych na granicy opiera się na następującej idei: każda kolejna współrzędna zmienia kierunek linii o pewien kąt. Jeśli kąt jest bardzo mały, możemy założyć, że współrzędne leżą praktycznie na tej samej linii. Dlatego możemy usunąć wszystkie współrzędne pośrednie i pozostawić tylko te skrajne. Aby znaleźć „skrajne” współrzędne linii, iterujemy po wszystkich współrzędnych i obliczamy całkowity kąt odchylenia, gdy tylko ten kąt stanie się większy niż wartość krytyczna, traktujemy tę współrzędną jako skrajną.
-      The number of grid elements into which we divide the region has a direct effect on the size of the matrix of linear equations, and therefore on the time of finding the solution of the differential equation. To reduce the cleaning time, we can reduce the density of the coordinates of the river border without losing accuracy. For this purpose, we perform the procedure of roughing the borders of parts of the river. Now we need to nest the Sources, Region, and Rivers classes in the Boundary boundary since the mesh generator requires only the boundary as an argument. The second problem, which was mentioned above, is that there is no possibility to set boundary conditions in the middle of the region, but only on the border. For this, the lines that make up the river network are divided into two lines that are very close to each other.
+      The number of grid elements into which we divide the region has a direct effect on the size of the matrix of linear equations, and therefore on the time of finding the solution of the differential equation. To reduce the solution time, we can reduce the density of the coordinates of the river border without losing accuracy. For this purpose, we perform the procedure of roughing the borders of parts of the river. 
+      %Now we need to nest the Sources, Region, and Rivers classes in the Boundary boundary since the mesh generator requires only the boundary as an argument. The second problem, which was mentioned above, is that there is no possibility to set boundary conditions in the middle of the region, but only on the border. For this, the lines that make up the river network are divided into two lines that are very close to each other.
 
     \section{Mesh generation}
 
@@ -412,7 +413,7 @@
         \centering
         \includegraphics[width=0.9\textwidth]{figs/mesh_generation.png}        
         %Wszystkie brzegi które są zawierane w klasie Region, a także brzegi rzek w klasie Rivers łączą się w jeden zamknięty brzeg (1). Z pomocą Triangle na bazie jednej zamkniętej granicy jest generowana siatką trójkątowa (2). Siatka trójkątowa z pomocą biblioteki Tethex jest konwertowana w siatkę prostokątów (3).
-        \caption{All banks that are contained in the Region class, as well as river banks in the Rivers class merge into one closed bank (1). With the help of a Triangle, a triangular mesh (2) is generated on the basis of one closed border. A triangle mesh is converted into a rectangle mesh with the help of the Tethex library (3).}
+        \caption{All boundaries that are contained in the Region class, as well as river boundaries in the Rivers class are merged into one closed boundary (1). With the help of a Triangle, a triangular mesh (2) is generated on the basis of one closed border. A triangle mesh is converted into a rectangle mesh with the help of the Tethex library (3).}
         \label{mesh_generation}
       \end{figure}
 
@@ -428,14 +429,14 @@
 
       %Коли є замкнута границя можна згенерувати сітку. Для цього була використана C++ бібліотека \cite{szewczuk1996triangle}. Методи і алгоритми бібліотеки Traingle містяться в однойменному класі. Triangle генерує Деланау сітку. Triangle дає можливість задати значення мінімального кута трикутника, мінімальної і максимальної довжини сторони трикутника, мінімальної і максимальної площі трикутника, співвідношення сторін трикутника та інше. Другим важливим аспектом є генерація достатньо малої сітки в місцях, де поле підземних вод змінюється найшвидше -- довкола джерел. Для цього можна задати множину координат(а саме координат джерел), де буде обмежена радіально площа трикутника відносно даних точок. Функція котра обмежує площу трикутника виглядає наступним чином:
       %Gdy istnieje zamknięta granica, można wygenerować siatkę. W tym celu wykorzystano bibliotekę C++ Triangle\cite{szewczuk1996triangle}. Metody i algorytmy biblioteki Traingle są zawarte w klasie o tej samej nazwie. Trójkąt generuje siatkę Delaunaya. Trójkąt pozwala ustawić wartość minimalnego kąta trójkąta, minimalną i maksymalną długość boku trójkąta, minimalną i maksymalną powierzchnię trójkąta, stosunek boków trójkąta itp. Drugim ważnym aspektem jest generowanie odpowiednio małej siatki w miejscach, w których pole wód podziemnych zmienia się najszybciej - w okolicach źródeł. Aby to zrobić, możesz określić zestaw współrzędnych (czyli współrzędne źródeł), w których obszar trójkąta względem danych punktów będzie ograniczony promieniowo. Funkcja ograniczająca pole trójkąta wygląda następująco:
-      When there is a closed border, you can generate a grid. For this, the C++ library \cite{szewczuk1996triangle} was used. The methods and algorithms of the Triangle library are contained in the class of the same name. Triangle generates a Delaunay mesh. Triangle allows you to set the value of the minimum angle of the triangle, the minimum and maximum length of the side of the triangle, the minimum and maximum area of the triangle, the ratio of the sides of the triangle, etc. The second important aspect is the generation of a sufficiently small grid in places where the groundwater field changes the fastest - around springs. To do this, you can specify a set of coordinates (namely, the coordinates of the sources), where the area of the triangle relative to the given points will be limited radially. The function that limits the area of the triangle looks like this:
+      When there is a closed border, you can generate a grid. For this, the Triangle C++ library \cite{szewczuk1996triangle} was used. The methods and algorithms of the Triangle library are contained in the class of the same name. Triangle generates a Delaunay mesh. Triangle allows you to set the value of the minimum angle of the triangle, the minimum and maximum length of the side of the triangle, the minimum and maximum area of the triangle, the ratio of the sides of the triangle, etc. The second important aspect is the generation of a sufficiently small grid in places where the groundwater field changes the fastest - around springs. To do this, you can specify a set of coordinates (namely, the coordinates of the sources), where the area of the triangle relative to the given points will be limited radially. The function that limits the area of the triangle looks like this:
       \begin{equation}
         A(r) = A_{min} + (A_{max} - A_{min}) \frac{1 - \exp{(\frac{-(\frac{r}{r_{ref}})^{exponant}}{2 \sigma^2})}}{1 + \exp{(\frac{-(\frac{r}{r_{ref}})^{exponant}}{2 \sigma^2})}} 
       \end{equation}
 
       %Розв'язувач Deal.II\cite{dealII94} вимагає сітки із квадратними елементами. Для цього ми використовуємо бібліотеку C++  Tethex \cite{tethex}  котра конвертує трикутні елементи сітки у чотирикутники, розбиваючи один трикутний елемент на три квадратних, чим збільшуючи кількість елементів сітки у три рази.
       %Solver Deal.II\cite{dealII94} wymaga siatki z elementami kwadratowymi. W tym celu używamy biblioteki Tethex \cite{tethex} C++, która konwertuje trójkątne elementy siatki na czworoboki, dzieląc jeden trójkątny element na trzy kwadratowe, zwiększając w ten sposób liczbę elementów siatki trzykrotnie.
-      The Deal.II\cite{dealII94} solver requires a mesh with square elements. For this, we use the Tethex \cite{tethex} C++ library, which converts triangular grid elements into quadrilaterals, dividing one triangular element into three square ones, thereby increasing the number of grid elements by three times.
+      The Deal.II\cite{dealII94} solver requires a mesh with square elements. For this, we use the Tethex C++ library \cite{tethex} , which converts triangular grid elements into quadrilaterals, dividing one triangular element into three square ones, thereby increasing the number of grid elements by three times.
 
       \begin{mintedbox}{python}
         mesh_params = MeshParams()
@@ -456,7 +457,7 @@
 
       %Кожна лінія містить також номер(посилання) граничної умови. Boundaries -- клас котрий містить набір пар із унікальним номером і відповідною йому граничною умовою котра може бути двох типів: Діріхлет і Ноймана. Граничну умову можна задати тільки на граничній лінії, іншими словами задати лінію посеред регіону і граничну умову на ній не можна. Проте лінію завжди можна апроксимувати дуже тонким прямокутником, тож за потреби це не є проблемою.
       %Każda linia zawiera również numer (odniesienie) warunku brzegowego. Boundaries -- klasa zawierająca zbiór par o unikalnym numerze i odpowiadającym mu warunku brzegowym, który może być dwojakiego rodzaju: Dirichlet i Neumann. Warunek brzegowy można ustawić tylko na linii granicznej, innymi słowy, nie można ustawić linii pośrodku regionu i warunku brzegowego na nim. Jednak linię zawsze można przybliżyć bardzo cienkim prostokątem, więc w razie potrzeby nie stanowi to problemu.
-      Each line also contains the number (reference) of the boundary condition. Boundaries -- a class that contains a set of pairs with a unique number and the boundary condition corresponding to it, which can be of two types: Dirichlet and Neumann. The boundary condition can be set only on the boundary line, in other words, you cannot set a line in the middle of the region and a boundary condition on it. However, the line can always be approximated by a very thin rectangle, so this is not a problem if needed.
+      Each line also contains the number (reference) of the boundary condition. Boundaries -- is a class that contains a set of pairs with a unique number and the boundary condition corresponding to it, which can be of two types: Dirichlet and Neumann. The boundary condition can be set only on the boundary line, in other words, you cannot set a line in the middle of the region and a boundary condition on it. However, the line can always be approximated by a very thin rectangle, so this is not a problem if needed.
 
       \begin{mintedbox}{python}
         boundary_conditions = BoundaryConditions()
@@ -477,16 +478,7 @@
       Deal.II\cite{dealII94} is a C++ library for numerically solving partial differential equations using adaptive finite elements. It uses state-of-the-art programming techniques to offer a modern interface to complex data structures and algorithms.
 
       %Rozwiążemy prostą wersję równania Poissona na naszym obszarze z niezerową prawą stroną.
-      We're going to solve a simple version of the Poisson equation in our area with a non-zero right-hand side.
-      
-      \begin{align*}
-        -\Delta \phi &= f \qquad\qquad & \text{in}\ S,
-        \\
-        \phi &= 0 \qquad\qquad & \text{on}\ \partial S.
-      \end{align*}
-      
-      %Rozważymy tylko szczególny przypadek $f(x)=P$.
-      We will only consider the special case $f(x)=P$.
+      We're going to solve a simple version of the Poisson equation in our area with a non-zero right-hand side \ref{poisson}(We will only consider the $\frac{P}{k} = f$.).
 
       %Od podstaw metody elementów skończonych wiemy, że potrzebne są kolejne kroki, aby przybliżyć rozwiązanie $\phi$ przybliżeniem skończonych wymiarów. Konkretnie, najpierw musimy wyprowadzić słabą postać powyższego równania, którą otrzymujemy mnożąc równanie przez funkcję testową $u$ z lewej strony i całkując po domenie $S$:
       From the basics of the finite element method, we know that further steps are needed to approximate the $\phi$ solution with the finite-dimensional approximation. Specifically, we first need to derive the weak form of the above equation, which we get by multiplying the equation by the $u$ test function on the left and integrating over the $S$ domain:
@@ -523,7 +515,7 @@
         %\item Siatka, na której można zdefiniować funkcje kształtu;
         \item Grid on which shape functions can be defined;
         %\item Element skończony opisujący funkcje kształtu, których chcemy użyć w komórce odniesienia (kwadrat jednostkowy $[0,1]^2$). Zwykłe funkcje Lagrange'a;
-        \item A finite element describing the shape functions we want to use in the reference cell (unit square $[0,1]^2$). Usual Lagrangian functions;
+        \item A finite element describing the shape functions we want to use in the reference cell (unit square $[0,1]^2$). Usually Lagrangian functions;
         %\item Numeracja wszystkich stopni swobody w siatce;
         \item Numbering of all degrees of freedom in the mesh;
         %\item Odwzorowanie, które mówi, w jaki sposób funkcje kształtu w rzeczywistej komórce są uzyskiwane z funkcji kształtu zdefiniowanych przez klasę elementów skończonych w komórce odniesienia. Domyślnie Deal.II użyje biliniowego mapowania;
@@ -593,7 +585,7 @@
         \end{itemize}
 
         %Poza tą strukturą istnieje jednak wiele sposobów osiągnięcia tego celu. Zasadniczo różnią się tym, jak dokładnie generuje się jedną siatkę z poprzedniej. Dla siatki z trójkątów, trójkąt zaznaczony do udoskonalenia jest dzielony na dwie części poprzez wprowadzenie jednej nowej krawędzi od środka najdłuższej krawędzi do przeciwległego wierzchołka. Oczywiście punkt środkowy od najdłuższej krawędzi musi być w jakiś sposób zrównoważony poprzez udoskonalenie komórki po drugiej stronie tej krawędzi (jeśli taka istnieje). Ta metoda nie działa w przypadku czworokątów, a przynajmniej nie jest łatwa. Powodem jest to, że elementy przejściowe utworzone z czworobocznych sąsiadów czworobocznej komórki, która ma zostać udoskonalona, byłyby trójkątami, a tego nie chcemy. W związku z tym podejście do adaptacyjności wybrane w Deal.II polega na wykorzystaniu siatek, w których sąsiednie komórki mogą różnić się poziomem udoskonalenia o jeden. Powoduje to, że węzły na interfejsach komórek należą do jednej strony, ale są niezrównoważone po drugiej. Powszechnym terminem dla nich są „wiszące węzły”. Jeśli udoskonalimy siatkę globalnie, błąd spadnie jako
-        Outside of this structure, however, there are many ways to achieve this goal. They fundamentally differ in how accurately one mesh is generated from the previous one. For a triangle mesh, the triangle selected for refinement is split in two by inserting one new edge from the center of the longest edge to the opposite vertex. Of course, the midpoint from the longest edge has to be balanced somehow by refining the cell on the other side of that edge (if any). This method doesn't work for quads, at least it's not easy. The reason is that the transition elements created from the quadrilateral neighbors of the quadrilateral cell to be refined would be triangles, and we don't want that. Therefore, the approach to adaptability is chosen in Deal.II is to use grids where adjacent cells can differ in the level of refinement by one. This causes nodes on cell interfaces to belong to one side but are unbalanced to the other. The common term for these is "hanging knots". If we refine the mesh globally, the error will fall as
+        Outside of this structure, however, there are many ways to achieve this goal. They fundamentally differ in how accurately one mesh is generated from the previous one. For a triangle mesh, the triangle selected for refinement is split in two by inserting one new edge from the center of the longest edge to the opposite vertex. Of course, the midpoint from the longest edge has to be balanced somehow by refining the cell on the other side of that edge (if any). This method doesn't work for quads, at least it's not easy. The reason is that the transition elements created from the quadrilateral neighbors of the quadrilateral cell to be refined would be triangles, and we don't want that. Therefore, the approach to adaptability is chosen in Deal.II is to use grids where adjacent cells can differ in the level of refinement by one. This causes nodes on cell interfaces to belong to one side but are unbalanced to the other. The common term for these is "hanging nodes". If we refine the mesh globally, the error will fall as
 
         \begin{align*}
           \|\nabla(\phi-\phi_h)\|_{S} \le C h_\text{max}^p \| \nabla^{p+1} \phi \|_{S},
@@ -676,7 +668,7 @@
       \end{equation}
 
       %Całka $\int^{r_{max}}_{r_{min}} \int^{\pi}_{-\pi} f(r, \theta) \textrm{d} \theta \textrm{d} r$ jak i równanie dla pola wód podziemnych, jest wyliczana numerycznie. Chociaż mamy dyskretnę rozwiązania pola wód podziemnych, ale wciąż otzrymanie wartości pola $\phi(x, y)$ w dowolnym punkcie nadal jest numerycznie skomplikowanym, o ile wymaga iterację po całej siatce regionu, a po znaleziniu odpowiedniego elementu -- interpolacje. Przez to przy aproksymówaniu całki skończoną sumą celem jest minimizacja ilości elementów. Kwadratura Gaussa jest dobrym rozwiązaniem, ale w danej pracy korzystamy z iteracujnej metody prostokątów:
-      Integral $\int^{r_{max}}_{r_{min}} \int^{\pi}_{-\pi} f(r, \theta) \textrm{d} \theta \textrm{d} r$, as well as the equation for the groundwater field, is calculated numerically. Although we have a discrete groundwater field solution, still getting the value of the $\phi(x, y)$ field at any point is still numerically complicated, as it requires iterating over the whole region mesh, and after finding the right element, interpolations. Thus, when approximating the integral with a finite sum, the goal is to minimize the number of elements. Gaussian quadrature is a good solution, but in this paper, we use the iterative method of rectangles:
+      Integral $\int^{r_{max}}_{r_{min}} \int^{\pi}_{-\pi} f(r, \theta) \textrm{d} \theta \textrm{d} r$, as well as the equation for the groundwater field, is calculated numerically. Although we have a discrete groundwater field solution, still getting the value of the $\phi(x, y)$ field at any point is numerically complicated, as it requires iterating over the whole region mesh, and after finding the right element, evaluate value over quadrature. Thus, when approximating the integral with a finite sum, the goal is to minimize the number of elements. Gaussian quadrature is a good solution, but in this paper, we use the iterative method of rectangles:
 
       \begin{equation}
         \label{numerical_integral}
@@ -729,7 +721,7 @@
         };\end{mintedbox}
 
         %W riversimpy dla obliczenia współczynników $a_i$ służy metoda integrate (lub integrate\_new) klasy Solver:
-        In riversimpy, the integrate (or integrate\_new) method of the Solver class is used to calculate the $a_i$ coefficients:
+        In riversimpy, the integrate\_trap (or integrate\_new) method of the Solver class is used to calculate the $a_i$ coefficients:
         
         \begin{mintedbox}{python}
           integration_params = IntegrationParams()
