more text fixes, and one image upd

--- a/master_thesis/bibliography.bib
+++ b/master_thesis/bibliography.bib
@@ -53,12 +53,12 @@
 }
 
 @misc{riversim,
-  title = {River Growth Simulation (RiverSim): Simulation of river growth using model based on Laplace equation. github.com/okmechak/RiverSim.},
+  title = {River Growth Simulation (RiverSim): Simulation of river growth using model based on Laplacian equation. github.com/okmechak/RiverSim.},
   url = {https://github.com/okmechak/RiverSim}
 }
 
 @misc{riversimpy,
-  title = {River growth simulation(RiverSim) Python library: Simulation of river growth using model based on Laplace equation. github.com/okmechak/RiverSimPy.},
+  title = {River growth simulation(RiverSim) Python library: Simulation of river growth using model based on Laplacian equation. github.com/okmechak/RiverSimPy.},
   url = {https://github.com/okmechak/RiverSimPy}
 }
 
